# reimu_on_starlit_water

./: AGENTS.md  Cargo.toml  README.md  flake.nix
nix/: module.nix  package.nix
src/: cli.rs  macos_clock.wgsl  main.rs  math.rs  rain_drops.wgsl  rain_ripples.wgsl  style.rs
src/app/: mod.rs  view.rs
src/effects/: clock.rs  mod.rs  rain.rs  spinner.rs
